<resources>
    <string name="app_name">Challenge Chapter 2</string>
    <string name="profile_menu">Profile</string>
    <string name="search_hint">Cari layanan, makanan, dan tujuan</string>
    <string name="beranda">Beranda</string>
    <string name="promo">Promo</string>
    <string name="pesanan">Pesanan</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="bayar">Bayar</string>
    <string name="klik_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>
    <string name="saldo">Rp100.000</string>
    <string name="gopay">gopay</string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="content_description">content description</string>
    <string name="xp_string">193 XP lagi dan ada harta karun</string>
    <string name="harta_karun">Harta karun bentar lagi hilang</string>
    <string name="restoran_terdekat">Restoran terdekat</string>
    <string name="voucher_string">Ada voucher nganggur, nih</string>
    <string name="card_string">Festival idaman perempuan! 😍</string>
    <string name="card_desc">Temukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%. klik! 👈</string>
    <string name="tokped_search">Cari powerbank</string>
    <string name="mail">Mail</string>
    <string name="feed">Feed</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="official_store">Official Store</string>
    <string name="whislist">Whislist</string>

    <string-array name="grid_title_list">
        <item>GoRide</item>
        <item>GoCar</item>
        <item>GoFood</item>
        <item>GoSend</item>
        <item>GoMart</item>
        <item>GoPulsa</item>
        <item>Check In</item>
        <item>Lainnya</item>
    </string-array>

    <string name="menu_tokped_1">Official\nStore</string>
    <string name="menu_tokped_2">Lihat\nSemua</string>
    <string name="menu_tokped_3">Elektronik</string>
    <string name="menu_tokped_4">Kebutuhan\nHarian</string>
    <string name="menu_tokped_5">Top-Up &amp;\nTagihan</string>
    <string name="menu_tokped_6">Office &amp;\nStationery</string>
    <string name="menu_tokped_7">Keuangan</string>
    <string name="menu_tokped_8">Travel &amp;\nEntertaiment</string>
    <string name="menu_tokped_9">Perlengkapan\nPesta</string>

    <string name="scnd_menu_tokped_1">Peduli\nLindungi</string>
    <string name="scnd_menu_tokped_2">Bazar Hari\nIni</string>
    <string name="scnd_menu_tokped_3">Live\nShopping</string>
    <string name="scnd_menu_tokped_4">Tokopedia\nSeru</string>
    <string name="scnd_menu_tokped_5">Bangga\nLokal</string>
    <string name="scnd_menu_tokped_6">Bayar di\nTempat</string>
    <string name="scnd_menu_tokped_7">Promo di\nSurabaya</string>


    <string name="strikethrough_price"><strike>Rp85.000</strike></string>
    <string name="dikirim_ke">Dikirim ke alamat rumah Arya Rezza</string>
    <string name="coins">200.000 Coins</string>
    <string name="tokped_saldo">Rp500.000</string>
    <string name="member">Member Gold</string>
    <string name="kupon">50 Kupon</string>
    <string name="tokped_coins">200.000 Coins</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="kejar_diskon">Kejar diskon</string>
    <string name="berakhir_dalam">Berakhir dalam</string>
    <string name="waktu">09 menit 26 detik</string>
    <string name="video_menarik_untukmu">Video menarik untukmu</string>
    <string name="placeholder">placeholder</string>
    <string name="harga">Rp 79.999</string>
    <string name="kota">Jakarta Selatan</string>
    <string name="persen_diskon">30%</string>
    <string name="segera_habis">Segera Habis</string>
</resources>