<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mail"
        android:title="@string/mail"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_mail_24" />

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_notifications_24" />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_shopping_cart_24" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:iconTint="@color/white"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_view_headline_24" />

</menu>